--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -5,8 +5,8 @@
 	"bundledWebRuntime": false,
 	"plugins": {
 		"SplashScreen": {
-			"launchShowDuration": 0,
-			"launchAutoHide": false,
+			"launchShowDuration": 5000,
+			"launchAutoHide": true,
 			"showSpinner": true
 		}
 	}
