--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -5,9 +5,8 @@
 	"bundledWebRuntime": false,
 	"plugins": {
 		"SplashScreen": {
-			"launchShowDuration": 5000,
-			"launchAutoHide": true,
-			"showSpinner": true
+			"launchAutoHide": false,
+			"showSpinner": false
 		}
 	}
 }
