--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -5,9 +5,8 @@
 	"bundledWebRuntime": false,
 	"plugins": {
 		"SplashScreen": {
-			"launchShowDuration": 5000,
-			"launchAutoHide": true,
-			"showSpinner": true
+			"launchAutoHide": false,
+			"showSpinner": false
 		}
 	}
 }
