--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/push-notifications": "^1.0.7",
+    "@capacitor/splash-screen": "^1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-camera": "^6.0.0",
