--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@awesome-cordova-plugins/app-version": "^5.37.3",
     "@awesome-cordova-plugins/camera": "^5.37.1",
     "@awesome-cordova-plugins/in-app-browser": "^5.37.3",
     "@capacitor/android": "3.3.3",
@@ -30,6 +31,7 @@
     "@capacitor/splash-screen": "^1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "rxjs": "~6.6.0",
